# speller

./: CMakeLists.txt  README.md  dictionary.txt
include/: Checker.h  checker.h
includes/: BinTreeChecker.h  CheckWords.h  Checker.h  File.h  FileProcessor.h  HashMapChecker.h  HashTableChecker.h  Timer.h  VectorChecker.h
sources/: binTreeChecker.cpp  checkWords.cpp  checker.cpp  file.cpp  fileProcessor.cpp  hashMapChecker.cpp  hashTableChecker.cpp  main.cpp  timer.cpp  vectorChecker.cpp
src/headers/: bin_tree_checker.h  file.h  hash_map_checker.h  hash_table_checker.h  timer.h  vector_checker.h
src/sources/: bin_tree_checker.cpp  checker.cpp  file.cpp  hash_map_checker.cpp  hash_table_checker.cpp  main.cpp  timer.cpp  vector_checker.cpp
